# PriceGrouper

./: .gitignore  CMakeLists.txt  loadExternalsHTTPS.py  loadExternalsSSH.py
Resources/: ParametersExplained.md  config.json
Tests/: CMakeLists.txt  CompleteSortingTest.cpp  CompleteSortingTest.h  PriceSorterTests.cpp  PriceSorterTests.h  SmallPriceGroupTest.cpp  SmallPriceGroupTest.h
src/: CMakeLists.txt  LargePriceGroup.cpp  LargePriceGroup.h  PriceGroupColumn.cpp  PriceGroupColumn.h  PriceSorter.cpp  PriceSorter.h  SmallPriceGroup.cpp  SmallPriceGroup.h
src/include/PriceGrouper/: LargePriceGroup.h  PriceSorter.h  SmallPriceGroup.h
